--- a/css/main.css
+++ b/css/main.css
@@ -41,12 +41,19 @@ html {
 body {
   margin: 0;
   padding: 0;
+  color: #f1f2f2;
 }
 a:link,
 a:active {
     /* it is okay to get rid of the focus rectangle for mouse users but NEVER FOR KEYBOARD USERS. THEY NEED THIS!!!!!!!! */
     
     outline: none;
+}
+
+.card {
+    display: block;
+    position: absolute;
+    text-align: center;
 }
 
 .icon {
