--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,9 @@ a:active {
 }
 
 .icon {
-    width: 100%;
+    padding-top: 1em;
+    width: 250px;
+    margin-bottom: 8em;
     position:absolute;
     display: block;
 }
