--- a/css/main.css
+++ b/css/main.css
@@ -38,16 +38,21 @@ html {
     }
  
 }
+
 body {
+  position: absolute;
   margin: 0;
   padding: 0;
-  color: #f1f2f2;
 }
 a:link,
 a:active {
     /* it is okay to get rid of the focus rectangle for mouse users but NEVER FOR KEYBOARD USERS. THEY NEED THIS!!!!!!!! */
     
     outline: none;
+}
+
+.main {
+    text-align: center;
 }
 
 .card {
