--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,10 @@ html {
     html {
         font-size: 130%;
     }
- 
+    
+    .paint {
+        width: 80%;
+    }
 }
 
 body {
@@ -49,13 +52,17 @@ a:active {
     outline: none;
 }
 
-h1 {
-    size: 30px;
-    color: #000000; 
+.twilight {
+    position: absolute;
+    width:100%;
+    height: 100vh;
+    background-image: url(../images/twilight.svg);
+    background-color: black;
 }
 
-p {
-    size: 16px;
-    color: #000000;
-}
+.paint {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
     
+}
