--- a/css/main.css
+++ b/css/main.css
@@ -36,10 +36,7 @@ html {
     html {
         font-size: 130%;
     }
-    
-    .paint {
-        width: 80%;
-    }
+
 }
 
 body {
@@ -62,7 +59,20 @@ a:active {
 
 .paint {
     position: absolute;
-    width: 100%;
+    width:100%;
     height: 100vh;
-    
+    background-image: url(../images/paint_splat.svg);
+    background-repeat: no-repeat;
 }
+
+
+.intro {
+    position: absolute;
+    text-align: center;
+    color: #3f5cff;
+    top: 30%;
+    transform: translateY(-70%);
+    left: 50%;
+    transform: translateX(-50%);
+}
+    
