--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,16 @@ a:active {
     transform: translateX(-50%);
     height: 100vh;
     margin-top: 20px;
-    margin-bottom: 50px;
+    margin-bottom: -50px;
     background-image: url(../images/paint_splat.svg);
     background-repeat: no-repeat;
+}
+
+.icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 200px;
 }
 
 .intro {
@@ -80,3 +87,16 @@ a:active {
     transform: translateX(-50%);
 }
     
+.contact-1 {
+    position: absolute;
+    text-align: center;
+}
+
+.contact-2 {
+    position: absolute;
+    display: inline;
+}
+
+a {
+    color: #3f5cff;
+}
