--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,18 @@ html {
   box-sizing: inherit;
 }
 
-@media only screen and (min-width: 60em) {
- 
+@media only screen and (min-width: 38em) {
+    
     html {
-        font-size:60%;
+        font-size: 100%;
+    }
+
+}
+
+@media only screen and (min-width: 60em) {
+    
+    html {
+        font-size: 110%;
     }
 
 }
@@ -28,7 +36,7 @@ html {
 @media only screen and (min-width: 90em) {
  
     html {
-        font-size: 80%;
+        font-size: 140%;
     }
 
 }
@@ -36,7 +44,7 @@ html {
 @media only screen and (min-width: 120em) {
     
     html {
-        font-size: 100%;
+        font-size: 140%;
     }
 
 }
@@ -61,14 +69,13 @@ a:active {
 
 .intro {
     position: absolute;
-    width:90%;
-    left: 50%;
-    transform: translateX(-50%);
+    text-align: center;
+    width:100%;
     height: 80vh;
     margin-top: 20px;
-    margin-bottom: -50px;
     background-image: url(../images/paint_splat.svg);
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .icon {
@@ -82,22 +89,18 @@ a:active {
 .text {
     position: absolute;
     text-align: center;
-    color: black;
-    font-size: 30px;
     top: 30%;
     transform: translateY(-70%);
     left: 50%;
     transform: translateX(-50%);
 }
- 
-.contact-1 {
-    position: absolute;
-    text-align: center;
+
+h1 {
+    color: black;
 }
 
-.contact-2 {
-    position: absolute;
-    display: inline;
+p {
+    font-size: 1rem;
 }
 
 a {
