--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+charset "utf-8";
+
 @-moz-viewport { width: device-width; scale: 1; }
 @-ms-viewport { width: device-width; scale: 1; }
 @-o-viewport { width: device-width; scale: 1; }
@@ -82,6 +84,7 @@ a:active {
     position: absolute;
     left: 50%;
     top: 5vh;
+    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
     height: 175px;
 }
@@ -90,8 +93,10 @@ a:active {
     position: absolute;
     text-align: center;
     top: 35%;
+    -webkit-transform: translateY(-65%);
     transform: translateY(-65%);
     left: 50%;
+    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
 
